Fix footer on mobile

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -13,7 +13,7 @@
   text-align: center;
 
   @media (max-width: $mobile-max-width) {
-    position: sticky;
+    position: static;
   }
 
   a {
